# derive-fields

./: .rust-analyzer.json  Cargo.toml  LICENSE  README.md
src/: create_enum.rs  get_alias.rs  get_derives.rs  get_enum_name.rs  get_iter_impl.rs  lib.rs
tests/: alias.rs  common.rs  default_derives.rs  derives.rs  derives.stderr  field_keys.rs  field_keys_derives.rs  field_keys_derives.stderr  fields.rs  fields_derives.rs  fields_derives.stderr  hashmap.rs  iter.rs  main.rs  override_name.rs  serde.rs
