[package]
name = "derive-fields"
version = "0.1.0"
edition = "2024"

[lib]
proc-macro = true

[features]
default = ["iter"]
iter = []
keys-serde = ["serde"]
fields-serde = ["serde"]

[[test]]
name = "tests"
path = "tests/main.rs"
required-features = ["iter", "keys-serde", "fields-serde"]

[dev-dependencies]
trybuild = "1.0.112"
serde_json = "1"
serde = { version = "1", features = ["derive"] }

[dependencies]
convert_case = "0.8"
proc-macro2 = "1"
quote = "1"
serde = { version = "1", features = ["derive"], optional = true }
syn = "2"
